# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: makefile.yml
gendiff/: __init__.py  cli.py  diff_tree.py  formatter.py  generate_difference.py  generate_diffrent.py  parse.py  parser.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_generate_diff.py
tests/: test_generate_diff.py
