[tool.poetry]
name = "hexlet-code"
version = "0.5.0"
description = "Show difference between two data files"
authors = ["Dmitrii Mikailov <dmi.sm.rf@yandex.ru>"]
repository = "https://github.com/dmi-sm/python-project-50"
readme = "README.md"
packages = [
  { include = "gendiff" },
]

classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Build Tools"
]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
flake8 = ">=5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
